[gd_scene load_steps=10 format=2]

[ext_resource path="res://Area2D.gd" type="Script" id=1]
[ext_resource path="res://Assets/projectile/Pure_24.png" type="Texture" id=2]
[ext_resource path="res://Assets/Props/explosion3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Props/explosion2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Props/explosion5.png" type="Texture" id=5]
[ext_resource path="res://Assets/Props/explosion4.png" type="Texture" id=6]
[ext_resource path="res://Assets/Props/explosion1.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56.672, 46.1978 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[node name="Projectile" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
z_index = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.933333, 0.0705882, 0.0705882, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Explosion" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
frame = 4

[node name="Lifetime" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Projectile_body_entered"]
[connection signal="animation_finished" from="Explosion" to="." method="_on_Explosion_animation_finished"]
[connection signal="timeout" from="Lifetime" to="." method="_on_Lifetime_timeout"]
